Fixes company anchor ending up behind the sticky header.

--- a/static/assets/scss/_nav.scss
+++ b/static/assets/scss/_nav.scss
@@ -2,6 +2,10 @@
 /*===========================================================
  Navigation Menu Desktop
 ============================================================*/
+[id] {
+    scroll-margin-top: 175px;
+}
+
 .header-area {
     padding: 15px 0;
 }
